cilium/wrong-identity/resources/helloworld-v2-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "v2"
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: helloworld-v2
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.cilium.k8s.policy.serviceaccount: sleep-v2
    toPorts:
    - ports:
      - port: "5000"
        protocol: TCP
